# HW-3_PIP_Yedija422023007

./: LICENSE  README.md  setup.cfg  setup.py
src/siwp2005_yedija_gregorius_sort.egg-info/: PKG-INFO  SOURCES.txt
src/siwp2005_yedija_sort.egg-info/: PKG-INFO  SOURCES.txt
src/sort/: insertion_sort.py  quick_sort.py
tests/: test_bubble_sort.py  test_insertion_sort.py  test_quick_sort.py
