[metadata]
name = siwp2005-yedija_gregorius-sort
version = 0.1.1
author = Yedija Gregorius
author_email = yedija.422023007@civitas.ukrida.ac.id
description = A package that provides implementations of various sorting algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yedijagregorius20/siwp2005-yedija_gregorius-sort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src
